--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,8 +1,7 @@
 .card{
-    width: calc(25% - 20px);
-    margin: 10px;
+    margin: 0 0 30px;
     border: 1px solid #000;
-    padding: 25px;
+    padding: 15px;
 }
 .card__img{
     width: 100%;
